ci: auto-apply spotless formatting and skip check in build

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -28,7 +28,6 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
       - name: Apply code formatting
         run: ./gradlew spotlessApply --no-daemon
       
@@ -39,8 +38,9 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git diff --quiet || (git add -A && git commit -m "style: apply Spotless formatting [skip ci]" && git push)
 
+
       - name: Build with Gradle
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build -x spotlessCheck --no-daemon
 
       - name: Run tests
         run: ./gradlew test --no-daemon
